# Benchmark

./: Dockerfile  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml  response_messages.json  бот.xmind
bot/: models.py
bot/migrations/: 0001_initial.py
bot/src/core/: http_client.py  settings.py
bot/src/handlers/client/: career_strategy_handlers.py  company_materials.py  users_info.py
bot/src/keyboards/: begining_segmentation.py  career_strategy_inline_menu.py  core_inline_menu.py
bot/src/states/: user_data.py
package/: asgi.py  settings.py  urls.py  wsgi.py
src/: main.py
src/core/: settings.py
src/handlers/client/: career_strategy_handlers.py  company_materials.py  users_info.py
src/keyboards/: begining_segmentation.py  career_strategy_inline_menu.py  core_inline_menu.py
